--- a/app/src/main/res/values-fr/about.xml
+++ b/app/src/main/res/values-fr/about.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_title">About</string>
-    <string name="about_close">Close</string>
-    <string name="about_whoami">I am monerujo</string>
+    <string name="about_title">À Propos</string>
+    <string name="about_close">Fermer</string>
+    <string name="about_whoami">Je suis monerujo</string>
     <string name="about_version">Version %1$s (%2$d)</string>
 
     <string name="credits_text"><![CDATA[
-        <b>Credits</b>
+        <b>Crédits</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo et al.
@@ -15,49 +15,53 @@
         ]]></string>
 
     <string name="privacy_policy"><![CDATA[
-        <h1>Privacy Policy</h1>
-        <p>This page informs you of our policies regarding the collection,
-        use and disclosure of personal information we receive from users of our
-        app (monerujo: Monero Wallet).
+        <h1>Politique de Confidentialité</h1>
+        <p>Cette page vous informe de nos politiques en matière de collecte,
+        utilisation et divulgation des informations personnelles que nous
+        recevons des utilisateurs de notre application (monerujo: Monero Wallet).
         </p>
-        <p>By using the app, you agree to the collection and use of information in
-        accordance with this policy.
+        <p>En utilisant l’application, vous consentez à la collecte et à l’utilisation
+        d’informations en accord avec cette politique.
         </p>
-        <h2>Data Collected</h2>
-        <p>Personal data is any kind of data that could identify an individual.
+        <h2>Données Collectées</h2>
+        <p>Une donnée personnelle est tout type de donnée qui est succeptible
+        d’identifier un individu.
         </p>
-        <p>Monero keys and public addresses are collected and processed by the app locally
-        for the purpose of processing transactions and transmitted into the Monero Network
-        in encrypted form.
+        <p>Les clefs et adresses publiques Monero collectées sont traitées localement par
+        l’application pour le besoin de traitement des transactions et transmises sur le
+        réseau Monero sous une forme chiffrée.
         </p>
-        <p>Other personal data is not collected by the app.</p>
-        <p>If you use the USD/EUR exchange (optional) functionality, monerujo fetches the exchange
-        rate through the public API of kraken.com.
-        See their privacy policy at https://www.kraken.com/legal/privacy for
-        details on how data in your requests is collected (especially the
-        section "Information We Collect Automatically").</p>
-        <p>If you use the app to pay to BTC addresses, you will be using the XMR.TO service.
-        See their privacy policy at https://xmr.to/ for details. Monerujo send them the BTC
-        destination address and amount. Your IP will also be collectable.</p>
-        <h2>App Permissions</h2>
+        <p>Aucune autre donnée personnelle n’est collectée par l’application.</p>
+        <p>Si vous utilisez la fonction (optionnelle) de change USD/EUR, monerujo récupère le
+        taux de change via l’API publique de kraken.com.
+        Consultez leur politique de confidentialité sur https://www.kraken.com/legal/privacy
+        pour des détails sur la façon dont les données de vos requêtes sont collectées
+        (particulièrement la rubrique "Information We Collect Automatically").</p>
+        <p>Si vous utilisez l’application pour payer à une adresse BTC, vous utiliserez
+        le service XMR.TO. Consultez leur politique de confidentialité sur https://xmr.to/
+        pour plus de détails. Monerujo leur transmet l’adresse de destination BTC et le
+        montant. Votre IP serait également collectable.</p>
+        <h2>Permissions de l’application</h2>
         <ul>
-        <li>INTERNET : Connect to the Monero Network via a Monero Daemon Node</li>
-        <li>READ_EXTERNAL_STORAGE : Read wallet files stored on the device</li>
-        <li>WRITE_EXTERNAL_STORAGE : Write wallet files stored on the device</li>
-        <li>WAKE_LOCK : Keep device awake while syncing</li>
-        <li>CAMERA : Scan QR Codes for receiving Monero</li>
+        <li>INTERNET : Connection au réseau Monero via le démon d’un nœud Monero</li>
+        <li>READ_EXTERNAL_STORAGE : Lire les fichiers de portefeuille stockés sur l’appareil</li>
+        <li>WRITE_EXTERNAL_STORAGE : Écrire les fichiers de portefeuille stockés sur l’appareil</li>
+        <li>WAKE_LOCK : Garder l’appareil actif pendant la synchronisation</li>
+        <li>CAMERA : Scanner les QR Codes pour recevoir Monero</li>
         </ul>
-        <h2>Changes to this Privacy Policy</h2>
-        <p>We may update this privacy policy from time to time. We will notify
-        you of any changes by posting the new privacy policy in the app and on the
-        website (www.monerujo.io)
-        You are advised to review this privacy policy periodically for any changes.
-        <p>This Privacy Policy was last updated: 10th November, 2017.
+        <h2>Changements à cette Politique de Confidentialité</h2>
+        <p>Nous pourrions avoir besoin de mettre à jour cette politique de confidentialité
+        de temps en temps. Nous vous indiquerons tout changement en publiant la nouvelle
+        politique de confidentialité dans l’application et sur le site web (www.monerujo.io)
+        Il vous est conseillé de contrôler cette Politique de Confidentialité périodiquement
+        pour tout changement.
+        <p>Cette Politique de Confidentialité é été mise à jour pour la dernière fois : le
+        10 Novembre 2017.
         </p>
-        <h2>Contact Us</h2>
-        <p>If you have any questions about our privacy policy,
-        or how your data is being collected and processed,
-        please e-mail privacy@monerujo.io.
+        <h2>Nous contacter</h2>
+        <p>Si vous avez des questions à propos de notre politique de confidentialité,
+        ou si vos données ont été collectées et traitées,
+        merci d’envoyer un e-mail à privacy@monerujo.io.
         </p>
         ]]></string>
 
