--- a/app/src/main/res/values-se/about.xml
+++ b/app/src/main/res/values-se/about.xml
@@ -8,7 +8,7 @@
     <string name="credits_text"><![CDATA[
         <b>Medverkande</b>
         <br/>
-        m2049r, noxxi, baltsar777, anhdres, keejef,
+        m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo et al.
         <br/><br/>
         <a href="https://monerujo.io/">monerujo.io</a>
